# pg2any

./: .dockerignore  .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.chaos-test-kafka.yml  docker-compose.chaos-test-sqlite.yml  docker-compose.chaos-test-sqlserver.yml  docker-compose.chaos-test.yml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: auto-tag.yml  chaos_integration_test.yml  chaos_integration_test_kafka.yml  chaos_integration_test_sqlite.yml  chaos_integration_test_sqlserver.yml  ci.yml  dependencies.yml  pgbench_integration_test.yml  pgbench_integration_test_kafka.yml  pgbench_integration_test_sqlite.yml  pgbench_integration_test_sqlserver.yml  publish-crate.yml  quality.yml  release.yml
docs/: DOCKER.md
docs/superpowers/plans/: 2026-05-14-kafka-destination.md
docs/superpowers/specs/: 2026-05-14-kafka-destination-design.md
env/: .env  .env.kafka  .env.sqlite  .env.sqlserver  .env_local
examples/: Cargo.toml
examples/examples/: custom_destination.rs
examples/monitoring/: prometheus.yml
examples/monitoring/prometheus-rules/: cdc-alerts.yml
examples/scripts/: init_mysql.sql  init_postgres.sql  init_sqlite.sql  init_sqlserver.sql  pgbench_testing.sql
examples/src/: custom_api_destination.rs  main.rs
monitoring/exporter/mysql/: .my.cnf
pg2any-lib/: Cargo.toml
pg2any-lib/src/: app.rs  buffer.rs  client.rs  config.rs  connection.rs  consumer.rs  env.rs  error.rs  io_thread.rs  lib.rs  logical_parser.rs  logical_stream.rs  lsn_tracker.rs  message.rs  metrics.rs  metrics_abstraction.rs  metrics_server.rs  parser.rs  pg_replication.rs  producer.rs  relay_log.rs  replication.rs  replication_actor.rs  replication_messages.rs  replication_protocol.rs  replication_state.rs  retry.rs  slot.rs  sql_compression.rs  sql_generator.rs  sql_renderer.rs  sql_streaming.rs  sql_thread.rs  streaming_transaction_manager.rs  transaction_file_manager.rs  transaction_manager.rs  types.rs
pg2any-lib/src/destinations/: bulk_insert.rs  coalescing.rs  common.rs  destination_factory.rs  dialect.rs  function.rs  kafka.rs  mod.rs  mysql.rs  operation.rs  sqlite.rs  sqlserver.rs
pg2any-lib/src/destinations/dialects/: ansi.rs  kafka.rs  mod.rs  mysql.rs  sqlite.rs  sqlserver.rs
pg2any-lib/src/monitoring/: jemalloc_stats.rs  metrics.rs  metrics_abstraction.rs  metrics_server.rs  mod.rs
pg2any-lib/src/storage/: binary_record.rs  compressed.rs  mod.rs  sql_parser.rs  traits.rs  uncompressed.rs
pg2any-lib/tests/: bulk_insert_tests.rs  complete_system_test.rs  compression_feature_flag_tests.rs  custom_destination_tests.rs  destination_integration_tests.rs  env_parsing_tests.rs  event_type_refactor_tests.rs  graceful_shutdown_integration_tests.rs  graceful_shutdown_tests.rs  integration_tests.rs  io_sql_thread_tests.rs  kafka_destination_tests.rs  large_compressed_file_tests.rs  metrics_logical_tests.rs  mysql_edge_cases_tests.rs  mysql_error_handling_simple_tests.rs  mysql_where_clause_fix_tests.rs  position_tracking_tests.rs  replica_identity_tests.rs  shutdown_no_replay_regression_tests.rs  smart_batching_tests.rs  sqlite_comprehensive_tests.rs  sqlite_destination_tests.rs  sqlserver_bulk_insert_tests.rs  streaming_transaction_tests.rs  where_clause_fix_tests.rs
pg2any-lib/tests/common/: mod.rs
scripts/: init_mysql.sql  init_postgres.sql
src/: main.rs
tests/chaos/scenarios/input/: scenario1_input.sql  scenario2_input.sql  scenario3_input.sql  scenario4_input.sql  scenario5_input.sql
tests/chaos/scenarios/verify/: scenario1_verify.sql  scenario2_verify.sql  scenario3_verify.sql  scenario4_verify.sql  scenario5_verify.sql
tests/chaos/scenarios/verify_kafka/: verify_kafka_count.sh
tests/chaos/scenarios/verify_sqlite/: scenario1_verify.sql  scenario2_verify.sql  scenario3_verify.sql  scenario4_verify.sql  scenario5_verify.sql
tests/chaos/scenarios/verify_sqlserver/: scenario1_verify.sql  scenario2_verify.sql  scenario3_verify.sql  scenario4_verify.sql  scenario5_verify.sql
tests/chaos/scripts/: chaos_script.sh  quick_test.sh  run_chaos_tests.sh  run_chaos_tests_kafka.sh  run_chaos_tests_sqlite.sh  run_chaos_tests_sqlserver.sh  run_pgbench_chaos_test.sh  run_pgbench_chaos_test_kafka.sh  run_pgbench_chaos_test_sqlite.sh  run_pgbench_chaos_test_sqlserver.sh
