[workspace]
resolver = "2"
members = [
    "examples",
    "pg2any-lib"
]

[workspace.package]
edition = "2021"
authors = ["danielshih <dog830228@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/isdaniel/pg2any"
homepage = "https://github.com/isdaniel/pg2any"
documentation = "https://docs.rs/pg2any_lib"
readme = "README.md"
categories = ["database", "asynchronous", "development-tools"]
keywords = ["postgresql", "cdc", "replication", "database", "streaming"]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat", "io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
bytes = "1.11.1"
async-trait = "0.1.89"
thiserror = "2.0.18"
lazy_static = "1.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
pg_walstream = "0.5.1"
tiberius = { version = "0.12.3", features = ["tds73", "sql-browser-tokio", "bigdecimal", "rust_decimal", "time", "chrono"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "sqlite", "chrono", "uuid"] }
flate2 = "1.1.9"
async-compression = { version = "0.4.37", features = ["tokio", "gzip"] }

# Monitoring and metrics
prometheus = { version = "0.14.0", features = ["process"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
