[workspace]
resolver = "2"
members = [
    "examples",
    "pg2any-lib"
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
authors = ["danielshih <dog830228@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/isdaniel/pg2any"
homepage = "https://github.com/isdaniel/pg2any"
documentation = "https://docs.rs/pg2any_lib"
readme = "README.md"
categories = ["database", "asynchronous", "development-tools"]
keywords = ["postgresql", "cdc", "replication", "database", "streaming"]

[workspace.dependencies]
tokio = { version = "1.53.1", features = ["full"] }
tokio-util = { version = "0.7.19", features = ["compat", "io-util"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
chrono = { version = "0.4.45", features = ["serde"] }
bytes = "1.12.1"
async-trait = "0.1.91"
thiserror = "2.0.19"
lazy_static = "1.5.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
pg_walstream = { version = "0.8.1", default-features = false, features = ["rustls-tls"] }
tiberius = { version = "0.12.3", features = ["tds73", "sql-browser-tokio", "bigdecimal", "rust_decimal", "time", "chrono"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid"] }
mysql_async = { version = "0.37.0", default-features = false, features = ["default-rustls"] }
flate2 = "1.1.9"
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
rdkafka = { version = "0.39.0", features = ["cmake-build", "tokio"] }
futures-util = "0.3.33"
base64 = "0.23.0"

# Monitoring and metrics
prometheus = { version = "0.14.0", features = ["process"] }
hyper = { version = "1.11.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.4"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
