[package]
name = "pg2any_lib"
version = "0.3.4"
edition = "2021"
authors = ["danielshih <dog830228@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/isdaniel/pg2any"
homepage = "https://github.com/isdaniel/pg2any"
documentation = "https://docs.rs/pg2any-lib"
readme = "../README.md"
description = "PostgreSQL to Any database library with Change Data Capture (CDC) and logical replication support"
keywords = ["postgresql", "cdc", "replication", "database", "streaming"]
categories = ["database", "asynchronous"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libpq-sys = { workspace = true }
libc = { workspace = true }
lazy_static = { workspace = true }
tiberius = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
# Monitoring dependencies (optional)
prometheus = { workspace = true, optional = true  }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }

[features]
default = ["mysql", "sqlserver", "sqlite"]
mysql = ["sqlx/mysql"]
sqlserver = ["tiberius"]
sqlite = ["sqlx/sqlite"]
metrics = ["hyper", "hyper-util", "http-body-util", "prometheus"]
